# claiw

./: .gitignore  .mcp.json  AGENTS.md  ARCHITECTURE.md  LICENSE  README.md  dbos-config.yaml  dbostest.sqlite  main.py  pyproject.toml  workflows.db
.cursor/rules/: dbos-workflows.mdc  pydantic-ai.mdc  python-engineer.mdc  testing.mdc
.quint/: quint.db
claiw/: __init__.py  cli.py  db.py  dbos_client.py  dbos_config.py  display.py  logger.py  registry.py
notes/: brainstorm.md  scratchpad.md
src/claiw/: cli.py
workflow_registry/: another.py  data_analyst.py  example.py  weather_agent.py
