[project]
name = "claiw"
version = "0.1.0"
description = "A supercharged agent workflow CLI. You're winning at the claw machine on the first try."
readme = "README.md"
requires-python = ">=3.12"
license = {text = "Apache-2.0"}
authors = [
  {name = "Sung", email = "sungwonchung3@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click==8.3.1",
    "pydantic-ai==1.22.0",
    "dbos==2.5.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/claiw"
Repository = "https://github.com/yourusername/claiw"

[project.scripts]
claiw = "claiw.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
